--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
+    "hexo-generator-search": "^1.0.3",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-pagination": "^0.1.0",
     "hexo-renderer-ejs": "^0.2.0",
-    "hexo-renderer-stylus": "^0.3.1",
     "hexo-renderer-marked": "^0.2.10",
-    "hexo-server": "^0.2.0"
+    "hexo-renderer-scss": "^1.0.2",
+    "hexo-renderer-stylus": "^0.3.1",
+    "hexo-server": "^0.2.0",
+    "hexo-tag-bootstrap": "0.0.8"
   }
 }
