--- a/themes/yld/_config.yml
+++ b/themes/yld/_config.yml
@@ -1,8 +1,9 @@
 # Header
 menu:
   Home: /
-  Archives: /archives
-rss: /atom.xml
+  # Archives: /archives
+  Build: /build-it
+# rss: /atom.xml
 
 # Content
 excerpt_link: Read More
@@ -14,7 +15,7 @@ widgets:
 - category
 - tag
 - tagcloud
-- archive
+# - archive
 - recent_posts
 
 # display widgets at the bottom of index pages (pagination == 2)
