all builds instructions in a single slideshow

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Catbot
 subtitle: Fighting Cat boredom disorder is our mission
-description: we make toys for cats, that are entertaining for humans to build
+description: we make toys for cats, disguising it as toys for humans to build
 author: Jérome Loï
 language:
 timezone:
