--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "hexo": {
     "version": "3.2.2"
   },
+  "scripts": {
+    "gen": "hexo generate"
+  },
   "dependencies": {
-    "hexo": "^3.2.0",
+    "hexo": "^3.2.2",
     "hexo-deployer-rsync": "^0.1.2",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
